--- a/modules/ecr/docker/index.html
+++ b/modules/ecr/docker/index.html
@@ -16,7 +16,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                     </svg>
                 </div>
-                <p class="text-gray-600 mb-8">Your application is running successfully!</p>
+                <p class="text-gray-600 mb-8">Your application is running successfully!!</p>
                 <div class="space-y-4">
                     <div class="bg-gray-50 p-4 rounded-lg">
                         <h2 class="font-semibold text-gray-700">Environment Info</h2>
